2009-05-21  Christophe Demko <contact@chdemko.com>
  * Publishing the 0.0.1 version
