@@ -6,7 +6,9 @@ CREATE TABLE `#__hello` (
   `id` int(11) NOT NULL auto_increment,
   `greeting` varchar(25) NOT NULL,
   `catid` int(11) NOT NULL default '0',
-  PRIMARY KEY  (`id`)
+  `checked_out` tinyint(1) NOT NULL default '0',
+  `checked_out_time` datetime NOT NULL default '0000-00-00 00:00:00',
+   PRIMARY KEY  (`id`)
 ) ENGINE=MyISAM AUTO_INCREMENT=0 DEFAULT CHARSET=utf8;
 
 INSERT INTO `#__hello` (`greeting`) VALUES
@@ -17,4 +19,18 @@ INSERT INTO `#__hello` (`greeting`) VALUES
 	('Hallo, Welt!'),
 	('Здравствуй, мир!');
 	
+INSERT INTO `experimental`.`jos_categories` (
+	`lft` ,
+	`rgt` ,
+	`extension` ,
+	`lang` ,
+	`title` ,
+	`alias` ,
+	`description` ,
+	`published` ,
+	`access` ,
+	`params`
+) VALUES
+('1', '2', 'com_hello', 'en-GB', 'Welcome', 'welcome', 'Welcome messages', '1', '1', '{}'),
+('3', '4', 'com_hello', 'en-GB', 'Good bye', 'good-bye', 'Good bye messages', '1', '1', '{}');
 
